--- a/src/templates/en/2019/index.html
+++ b/src/templates/en/2019/index.html
@@ -94,7 +94,7 @@
   <section class="intro-container">
     <div class="intro">
       <div class="intro-year">2019</div>
-      <h1><div class="alt-bg decorative-line"></div>Web Almanac</h1>
+      <h1 class="title title-lg title-alt">Web Almanac</h1>
       <h2>
         HTTP Archive's annual<br>
         <b>state of the web</b> report
@@ -111,7 +111,7 @@
   </section>
   <section class="featured-chapter">
     <div class="featured-chapter-content">
-      <h2><div class="decorative-line-center"></div>Featured Chapter</h2>
+      <h2 class="title title-center">Featured Chapter</h2>
       <h3>Third Parties</h3>
       <blockquote>
         The open web is vast, linkable, and interoperable by design. The ability to grab someone else’s complex library and use it on your site with a single <code>&lt;link></code> or <code>&lt;script></code> element has supercharged developers’ productivity and enabled awesome new web experiences; on the flip side, the immense popularity of a select few third-party providers raises important performance and privacy concerns. This chapter examines the prevalence and impact of third-party code on the web in 2019, the web usage patterns that lead to the popularity of third-party solutions, and potential repercussions for the future of web performance and privacy.
@@ -138,7 +138,7 @@
   <section class="contributors-container alt-bg">
     {% set contributors = config.contributors.keys() | length %}
     <div class="contributors">
-      <h2><div class="decorative-line"></div>Contributors</h2>
+      <h2 class="title title-alt">Contributors</h2>
       <p>
         The Web Almanac has been made possible by the hard work of the web community. {{ contributors }} people have volunteered countless hours in the planning, research, writing and production phases.
       </p>
@@ -148,14 +148,14 @@
     </div>
     <div class="people">
       <div class="people-number">{{ contributors }}</div>
-      <img id="character-markup" class="character" src="/static/images/character-markup.png" loading="lazy" />
-      <img id="character-star" class="character" src="/static/images/character-star.png" loading="lazy" />
-      <img id="character-hat" class="character" src="/static/images/character-hat.png" loading="lazy" />
+      <img id="character-markup" class="character" src="/static/images/character-markup.png" alt="" loading="lazy" />
+      <img id="character-star" class="character" src="/static/images/character-star.png" alt="" loading="lazy" />
+      <img id="character-hat" class="character" src="/static/images/character-hat.png" alt="" loading="lazy" />
     </div>
   </section>
   <section class="methodology-container">
     <div class="methodology">
-      <h2><div class="decorative-line-center"></div>Methodology</h2>
+      <h2 class="title title-center">Methodology</h2>
       <div class="methodology-data">
         <div class="websites-tested">
           <div>
