--- a/src/templates/en/2019/methodology.html
+++ b/src/templates/en/2019/methodology.html
@@ -122,8 +122,7 @@
   </nav>
 
   <div class="content">
-    <div class="subtitle"></div>
-    <h1 class="title">Methodology</h1>
+    <h1 class="title title-lg">Methodology</h1>
 
     <section>
       <img class="content-banner" src="/static/images/methodology-banner.png" alt="">
