--- a/src/templates/es/2019/index.html
+++ b/src/templates/es/2019/index.html
@@ -94,7 +94,7 @@
   <section class="intro-container">
     <div class="intro">
       <div class="intro-year">2019</div>
-      <h1><div class="alt-bg decorative-line"></div>Web Almanac</h1>
+      <h1 class="title title-alt">Web Almanac</h1>
       <h2>
         HTTP Archive informe del<br>
         <b>estado de la web</b> anual
@@ -111,7 +111,7 @@
   </section>
   <section class="featured-chapter">
     <div class="featured-chapter-content">
-      <h2><div class="decorative-line-center"></div>Capítulo Destacado</h2>
+      <h2 class="title title-center">Capítulo Destacado</h2>
       <h3>Third Parties</h3>
       <blockquote>
         La web abierta es vasta, enlazable e interoperable por diseño. La capacidad de tomar la biblioteca compleja de otra persona y usarla en su sitio con un solo elemento <code>&lt;link></code> or <code>&lt;script></code> ha incrementado la productividad de los desarrolladores y ha permitido nuevas e increíbles experiencias web; por otro lado, la inmensa popularidad de unos pocos servicios de terceros seleccionados plantea importantes problemas de rendimiento y privacidad. Este capítulo examina la prevalencia y el impacto del código de servicios de terceros en la web en 2019, los patrones de uso de la web que conducen a la popularidad de las soluciones de servicios de terceros y las posibles repercusiones para el futuro del rendimiento y la privacidad de la web.
@@ -138,7 +138,7 @@
   <section class="contributors-container alt-bg">
     {% set contributors = config.contributors.keys() | length %}
     <div class="contributors">
-      <h2><div class="decorative-line"></div>Contribuidores</h2>
+      <h2 class="title title-alt">Contribuidores</h2>
       <p>
         Web Almanac ha sido posible gracias al arduo trabajo de la comunidad web. {{ contributors }} personas han ofrecido incontables horas en las fases de planificación, investigación, redacción y producción.
       </p>
@@ -148,14 +148,14 @@
     </div>
     <div class="people">
       <div class="people-number">{{ contributors }}</div>
-      <img id="character-markup" class="character" src="/static/images/character-markup.png" loading="lazy" />
-      <img id="character-star" class="character" src="/static/images/character-star.png" loading="lazy" />
-      <img id="character-hat" class="character" src="/static/images/character-hat.png" loading="lazy" />
+      <img id="character-markup" class="character" src="/static/images/character-markup.png" alt="" loading="lazy" />
+      <img id="character-star" class="character" src="/static/images/character-star.png" alt="" loading="lazy" />
+      <img id="character-hat" class="character" src="/static/images/character-hat.png" alt="" loading="lazy" />
     </div>
   </section>
   <section class="methodology-container">
     <div class="methodology">
-      <h2><div class="decorative-line-center"></div>Metodología</h2>
+      <h2 class="title title-lg title-center">Metodología</h2>
       <div class="methodology-data">
         <div class="websites-tested">
           <div>
