--- a/src/static/css/page.css
+++ b/src/static/css/page.css
@@ -1,5 +1,4 @@
 .main {
-  padding-top: 32px;
   display: grid;
   grid-template-areas: 'index content';
   grid-template-columns: 300px auto;
@@ -44,7 +43,7 @@
   grid-area: index;
 }
 .index .index-box {
-  margin: 0 8px 8px;
+  margin: 20px 8px 8px;
   padding: 8px 16px;
 }
 .index .header {
@@ -117,9 +116,6 @@
 .content > section {
   margin-bottom: 64px;
 }
-.content .intro p {
-  font-weight: bold;
-}
 .content ul li {
   list-style: none;
 }
@@ -131,14 +127,6 @@
   display: inline-block;
   width: 1em;
   margin-left: -1em
-}
-
-.chapter-unedited {
-  font-family: monospace;
-  text-transform: uppercase;
-  color: red;
-  vertical-align: super;
-  font-size: 0.5em;
 }
 
 .content-banner {
@@ -352,24 +340,8 @@ figure .fig-desktop {
     margin: 0;
     padding: 0;
   }
-  .main .content .intro h1 {
-    font-size: 10vw;
-  }
-  .decorative-line {
-    display: none;
-  }
-  .decorative-line-mobile {
-    display: block;
-    width: 74px;
-    border-bottom: solid 1px #c6dcd2;
-    position: relative;
-    top: 12px;
-  }
   .index {
-    margin-bottom: 45px;
-  }
-  .index .index-box {
-    margin: 0px;
+    margin: 30px 0;
   }
   .index-box .header {
     display: flex;
