Optimize performance of home page header (#492)
* Add alt="" for the decorative images. #439

* Consistent titles and subtitles. #439

* Only the alternate titles, that have the .title-alt class, have the top line centered on mobile. Improve the .text-center modifier for the titles. #471

* Collapse these two CSS rules in order to achieve a consistent top & bottom margin. Subtitle is bold again.

* - Update the main header markup and styles
- Removed unused methodology.css

* Remove the #485 method

* Re-add the loading attributes.

* Optimize further the SVG

* Do not stretch the background on mobile #492
Remove obsolete bottom margin for the intro-container.

--- a/src/static/css/2019.css
+++ b/src/static/css/2019.css
@@ -124,7 +124,7 @@ h2.header {
 }
 
 .alt-bg {
-  background: #5C687D;
+  background-color: #5C687D;
   color: white;
 }
 
@@ -157,13 +157,13 @@ header.alt-bg a:focus, footer.alt-bg a:focus {
   color: #1A2B49;
 }
 
-header, footer {
+.top-header, footer {
   padding: 40px 60px;
 }
 article.main {
   max-width: 1324px;
 }
-header, footer .nav {
+.top-header, footer .nav {
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -433,7 +433,7 @@ p.copyright {
      font-size: 16px;
    }
   /* Header */
-  header, footer {
+  .top-header, footer {
     position: relative;
     padding: 30px;
   }
