--- a/src/templates/en/2019/base.html
+++ b/src/templates/en/2019/base.html
@@ -8,7 +8,8 @@
 
 {% block content%}
   {% block header %}
-    <header class="alt-bg">
+  <header class="alt-bg"> 
+    <div class="top-header">
       <a class="navigation-logo" href="{{ url_for('home', year=year, lang=lang) }}"><img src="/static/images/logo.png" alt="web almanac by http archive" srcset="/static/images/logo@2x.png 2x" /></a>
       <nav>
         <a href="{{ url_for('table_of_contents', year=year, lang=lang) }}">Table of Contents</a>
@@ -48,7 +49,28 @@
           {{ language_switcher() }}
         </div>
       </nav>
-    </header>
+    </div>
+    {% if request.endpoint == 'home' %}
+    <div class="intro-container">
+      <div class="intro">
+        <div class="intro-year">2019</div>
+        <h1 class="title title-lg title-alt">Web Almanac</h1>
+        <h2>
+          HTTP Archive's annual<br>
+          <b>state of the web</b> report
+        </h2>
+        <p>
+          Our mission is to combine the raw stats and trends of the HTTP Archive with the expertise of the web community. The Web Almanac is a comprehensive report on the state of the web, backed by real data and trusted web experts. It is comprised of 20 chapters spanning aspects of page content, user experience, publishing, and distribution.
+        </p>
+        <a href="{{ url_for('table_of_contents', year=year, lang=lang) }}" class="btn">
+          Start exploring
+        </a>
+      </div>
+      <img class="intro-image-2019" src="/static/images/home-hero-2019.png" alt="The Web Almanac 2019 edition" />
+      <img class="intro-image" src="/static/images/home-hero.png" alt="The Web Almanac 2019 edition" />
+    </div> 
+    {% endif %}    
+  </header>
   {% endblock %}
 
   {% block main %}{% endblock %}
