Add translators meta data to chapters (#508)

--- a/src/static/css/page.css
+++ b/src/static/css/page.css
@@ -139,7 +139,7 @@
   font-weight: bold;
   font-style: italic;
 }
-.byline.reviewers {
+.byline.reviewers, .byline.translators {
   font-weight: normal;
 }
 
