Detect whether Google Sheets will work (#491)
* Detect whether Google Sheets will work

* Missed an aria-labelledby

* Fix incorrect figure reference in HTTP/2 chapter

* Fix bug, tidy up errors in console

* Change to dataset img and have limited list of attributes supported

* Consolidate JavaScript in one place

* Move menu event listener back to base_chapter.html as important so shouldn't be defered

* Move menu event listener back to base_chapter.html as important so shouldn't be defered

* Remove old call

* Log an event when Interactive Figures are used

* Log GA events with gtag, move Sheets check to normal fetch

* Remove final async call. Add error handling.

* Fix errors

* Remove Google Sheets test - it just doesn't work

* Remove Sheets URLs from CSP as now no longer required

* Add Google Sheets Test Pixel

* Revert temp IP change

* Aria changes

* Fix typo and add screen-size check

* Add GA tag for screen width check

* Make iframe removal selector more specific to avoid moving non-sheets iframes

* Move data-saver earlier in the check

* Change test canvas size based on device pizel ratio

* Fix typo

* Move JavaScript into trial chapters and out of base_chapter for now

* Remove discussion URL

* Formatting fixes

--- a/src/templates/en/2019/base_chapter.html
+++ b/src/templates/en/2019/base_chapter.html
@@ -10,10 +10,10 @@
 {% block scripts %}
 {{ super() }}
 <script nonce="{{ csp_nonce() }}">
-
+  
 var indexBox = document.querySelector('.index-box');
 var indexBoxTitle = document.querySelector('.index .header');
-
+ 
 indexBoxTitle.addEventListener('click', function(e) {
   indexBox.classList.toggle('show');
 });
@@ -32,7 +32,10 @@ fetch(`https://discuss.httparchive.org/t/{{ metadata.get('discuss') }}.json`)
   var el = document.getElementById('num_comments');
   el.innerText = comments + ' ' + (comments == 1 ? 'comment' : 'comments');
 });
+  
+window.discussion_url='https://discuss.httparchive.org/t/{{ metadata.get('discuss') }}.json';
 </script>
+
 {% endblock %}
 
 {# Calls to action for readers who want to engage more with this chapter. #}
