Take Effective Connection Type into account when upgrading to interactive visuals (#537)
* Check connection effective type and if low bandwidth then do not upgrade to interactive visuals

* Fix fetch URL parsing parsing for IE11

* Fix typo

* Fix typo

Co-Authored-By: Rick Viscomi <rviscomi@users.noreply.github.com>

--- a/src/templates/en/2019/base_chapter.html
+++ b/src/templates/en/2019/base_chapter.html
@@ -18,7 +18,7 @@ indexBoxTitle.addEventListener('click', function(e) {
   indexBox.classList.toggle('show');
 });
 
-fetch(`https://discuss.httparchive.org/t/{{ metadata.get('discuss') }}.json`)
+fetch("https://discuss.httparchive.org/t/{{ metadata.get('discuss') }}.json")
     .then(function(r) { return r.json(); })
     .then(function(r) {
   if (!r) {
