--- a/src/templates/en/2019/base_chapter.html
+++ b/src/templates/en/2019/base_chapter.html
@@ -17,24 +17,11 @@ var indexBoxTitle = document.querySelector('.index .header');
 indexBoxTitle.addEventListener('click', function(e) {
   indexBox.classList.toggle('show');
 });
-
-fetch("https://discuss.httparchive.org/t/{{ metadata.get('discuss') }}.json")
-    .then(function(r) { return r.json(); })
-    .then(function(r) {
-  if (!r) {
-    return;
-  }
-
-  var comments = +r.posts_count - 1;
-  if (isNaN(comments)) {
-    return;
-  }
-  var el = document.getElementById('num_comments');
-  el.innerText = comments + ' ' + (comments == 1 ? 'comment' : 'comments');
-});
   
-window.discussion_url='https://discuss.httparchive.org/t/{{ metadata.get('discuss') }}.json';
+window.discussion_url="https://discuss.httparchive.org/t/{{ metadata.get('discuss') }}.json";
 </script>
+
+<script src='/static/js/chapter.js' defer></script>
 
 {% endblock %}
 
