--- a/src/templates/en/2019/base.html
+++ b/src/templates/en/2019/base.html
@@ -87,7 +87,7 @@
         <a href="{{ url_for('methodology', year=year, lang=lang) }}">Methodology</a>
       </nav>
       <div class="language-switcher">{{ language_switcher() }}</div>
-      <p class="copyright">Copyright © 2019 Web Almanac. Licensed under <a href="https://github.com/HTTPArchive/almanac.httparchive.org/blob/master/LICENSE">Apache 2.0</a>.</p>
+      <p class="copyright"><span>© 2019 Web Almanac. Licensed under <a href="https://github.com/HTTPArchive/almanac.httparchive.org/blob/master/LICENSE">Apache 2.0</a>.</span></p>
       <div class="social-media">
         <a href="https://twitter.com/HTTPArchive" class="twitter">
           <img src="/static/images/twitter.png" alt="Twitter" height="80" width="65" loading="lazy" />
