Add keyboard shortcuts for previous/next chapter #377 (#541)
* Add keyboard shortcuts for previous/next chapter #377

* dev info

* remove bio for now

Co-Authored-By: Barry Pollard <barry_pollard@hotmail.com>

* remove typo

Co-Authored-By: Barry Pollard <barry_pollard@hotmail.com>

* Handle shift key variations

Co-Authored-By: Barry Pollard <barry_pollard@hotmail.com>

* Handle shift key variations

Co-Authored-By: Barry Pollard <barry_pollard@hotmail.com>

* handle first chapter

Co-Authored-By: Rick Viscomi <rviscomi@users.noreply.github.com>

* fixes

* add tool tip

* make avatar url consistent

Co-Authored-By: Barry Pollard <barry_pollard@hotmail.com>

* apply suggestions

--- a/src/templates/en/2019/base_chapter.html
+++ b/src/templates/en/2019/base_chapter.html
@@ -17,7 +17,22 @@ var indexBoxTitle = document.querySelector('.index .header');
 indexBoxTitle.addEventListener('click', function(e) {
   indexBox.classList.toggle('show');
 });
-  
+
+document.addEventListener("keypress", function onPress(event) {
+ 	if (event.key === 'p' || event.key === 'P' || event.key === ',' || event.key === '<') {
+ 		var previous = document.getElementById('previous-chapter');
+ 		if (previous) {
+ 		  previous.click();
+ 		}
+ 	}
+ 	if (event.key === 'n' || event.key === 'N' || event.key === '.' || event.key === '>') {
+ 		var next = document.getElementById('next-chapter');
+ 		if (next) {
+ 		  next.click();
+ 		}
+ 	}
+});
+
 window.discussion_url="https://discuss.httparchive.org/t/{{ metadata.get('discuss') }}.json";
 </script>
 
@@ -106,7 +121,7 @@ window.discussion_url="https://discuss.httparchive.org/t/{{ metadata.get('discus
 
 {% macro render_prevnext() %}
   {% if prev_chapter %}
-      <a id="previous-chapter" href="/{{lang}}/{{year}}/{{prev_chapter['title'].lower().replace(' ', '-').replace('/', '')}}">
+      <a id="previous-chapter" title="Previous Chapter (press 'p' or ',')" href="/{{lang}}/{{year}}/{{prev_chapter['title'].lower().replace(' ', '-').replace('/', '')}}">
           <span class="arrow">&#8963;</span>
           <span class="chapter-no">
               Chapter {{ prev_chapter['chapter'] }}
@@ -118,7 +133,7 @@ window.discussion_url="https://discuss.httparchive.org/t/{{ metadata.get('discus
   {% endif %}
 
   {% if next_chapter %}
-      <a id="next-chapter" href="/{{lang}}/{{year}}/{{next_chapter['title'].lower().replace(' ', '-').replace('/', '')}}">
+      <a id="next-chapter" title="Next Chapter (press 'n' or '.')" href="/{{lang}}/{{year}}/{{next_chapter['title'].lower().replace(' ', '-').replace('/', '')}}">
               <span class="arrow">&#8963;</span>
               <span class="chapter-no">
                   Chapter {{ next_chapter['chapter'] }}
