Update the main logo to SVG (#549)
* Add alt="" for the decorative images. #439

* Add alt="" for the decorative images. #439

* Consistent titles and subtitles. #439

* Consistent titles and subtitles. #439

* Only the alternate titles, that have the .title-alt class, have the top line centered on mobile. Improve the .text-center modifier for the titles. #471

* Only the alternate titles, that have the .title-alt class, have the top line centered on mobile. Improve the .text-center modifier for the titles. #471

* Collapse these two CSS rules in order to achieve a consistent top & bottom margin. Subtitle is bold again.

* Collapse these two CSS rules in order to achieve a consistent top & bottom margin. Subtitle is bold again.

* - Update the main header markup and styles
- Removed unused methodology.css

* Re-add the loading attributes.

* Optimize further the SVG

* Do not stretch the background on mobile #492
Remove obsolete bottom margin for the intro-container.

* Use preserveAspectRatio="none" to avoid browsers inconsistencies #512

* Update logo to SVG

* - Update the main header markup and styles
- Removed unused methodology.css

* Re-add the loading attributes.

* Optimize further the SVG

* Do not stretch the background on mobile #492
Remove obsolete bottom margin for the intro-container.

* Use preserveAspectRatio="none" to avoid browsers inconsistencies #512

* Fix cropping for the HA logo

--- a/src/templates/es/2019/base.html
+++ b/src/templates/es/2019/base.html
@@ -9,7 +9,7 @@
 {% block content%}
   {% block header %}
     <header class="alt-bg">
-      <a class="navigation-logo" href="{{ url_for('home', year=year, lang=lang) }}"><img src="/static/images/logo.png" alt="web almanac por http archive" srcset="/static/images/logo@2x.png 2x"></a>
+      <a class="navigation-logo" href="{{ url_for('home', year=year, lang=lang) }}"><img src="/static/images/logo.svg" alt="Web Almanac por HTTP Archive"></a>
       <nav>
         <a href="{{ url_for('table_of_contents', year=year, lang=lang) }}">Tabla de Contenidos</a>
         <a href="{{ url_for('contributors', year=year, lang=lang) }}">Contribuidores</a>
@@ -35,7 +35,7 @@
         <a href="{{ url_for('methodology', year=year, lang=lang) }}">Metodología</a>
         <div class="misc">
           <a href="https://httparchive.org/">
-            <img src="/static/images/ha-home.png" alt="Página de Inicio HTTP Archive" height="34" width="66" loading="lazy" />
+            <img src="/static/images/ha-home.png" alt="Página de Inicio HTTP Archive" height="35" width="70">
           </a>
           <div class="social-media">
             <a href="https://twitter.com/HTTPArchive" class="twitter">
@@ -76,9 +76,9 @@
 
   {% block footer %}
     <footer class="alt-bg">
-      <a class="navigation-logo home-logo" href="{{ url_for('home', year=year, lang=lang) }}"><img src="/static/images/logo.png" alt="web almanac por http archive" srcset="/static/images/logo@2x.png 2x" loading="lazy" /></a>
+      <a class="navigation-logo home-logo" href="{{ url_for('home', year=year, lang=lang) }}"><img src="/static/images/logo.svg" alt="Web Almanac por HTTP Archive"></a>
       <a class="navigation-logo ha-logo" href="https://httparchive.org">
-        <img src="/static/images/ha-home.png" alt="Página de Inicio HTTP Archive" loading="lazy" />
+        <img src="/static/images/ha-home.png" alt="Página de Inicio HTTP Archive" height="35" width="70">
       </a>
       <nav class="nav-items">
         <a href="{{ url_for('table_of_contents', year=year, lang=lang) }}">Tabla de Contenidos</a>
