Use the HTTP Archive logo as an SVG (#562)
* The HTTP Archive logo is now a SVG.

--- a/src/templates/en/2019/base.html
+++ b/src/templates/en/2019/base.html
@@ -36,7 +36,7 @@
         <a href="{{ url_for('methodology', year=year, lang=lang) }}">Methodology</a>
         <div class="misc">
           <a href="https://httparchive.org/">
-            <img src="/static/images/ha-home.png" alt="HTTP Archive home" height="35" width="70">
+            <img src="/static/images/ha-home.svg" alt="HTTP Archive home" height="35" width="70">
           </a>
           <div class="social-media">
             <a href="https://twitter.com/HTTPArchive" class="twitter">
@@ -79,7 +79,7 @@
     <footer class="alt-bg">
       <a class="navigation-logo home-logo" href="{{ url_for('home', year=year, lang=lang) }}"><img src="/static/images/logo.svg" alt="Web Almanac by HTTP Archive"></a>
       <a class="navigation-logo ha-logo" href="https://httparchive.org">
-        <img src="/static/images/ha-home.png" alt="HTTP Archive home" height="35" width="70">
+        <img src="/static/images/ha-home.svg" alt="HTTP Archive home" height="35" width="70">
       </a>
       <nav class="nav-items">
         <a href="{{ url_for('table_of_contents', year=year, lang=lang) }}">Table of Contents</a>
