--- a/src/templates/es/2019/base.html
+++ b/src/templates/es/2019/base.html
@@ -35,7 +35,7 @@
         <a href="{{ url_for('methodology', year=year, lang=lang) }}">Metodología</a>
         <div class="misc">
           <a href="https://httparchive.org/">
-            <img src="/static/images/ha-home.png" alt="Página de Inicio HTTP Archive" height="35" width="70">
+            <img src="/static/images/ha-home.svg" alt="Página de Inicio HTTP Archive" height="35" width="70">
           </a>
           <div class="social-media">
             <a href="https://twitter.com/HTTPArchive" class="twitter">
@@ -78,7 +78,7 @@
     <footer class="alt-bg">
       <a class="navigation-logo home-logo" href="{{ url_for('home', year=year, lang=lang) }}"><img src="/static/images/logo.svg" alt="Web Almanac por HTTP Archive"></a>
       <a class="navigation-logo ha-logo" href="https://httparchive.org">
-        <img src="/static/images/ha-home.png" alt="Página de Inicio HTTP Archive" height="35" width="70">
+        <img src="/static/images/ha-home.svg" alt="Página de Inicio HTTP Archive" height="35" width="70">
       </a>
       <nav class="nav-items">
         <a href="{{ url_for('table_of_contents', year=year, lang=lang) }}">Tabla de Contenidos</a>
