Add ability to overwrite HTML tag (e.g. for dir="rtl" for Arabic) (#551)
* Add ability to overwrite HTML tag (e.g. for dir="rtl" for Arabic)

* Optimised images with calibre/image-actions

* Update src/templates/base.html

Co-Authored-By: Rick Viscomi <rviscomi@users.noreply.github.com>

* Change dir tar

--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="{% block lang %}{{ language.lang_attribute }}{% endblock %}">
+<html lang="{% block lang %}{{ language.lang_attribute }}{% endblock %}" {% block dir_attribute %}{% endblock %}>
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
