Handle print mode (#566)
* Handle print mode

* Make param checking more specific

* Show copyright notice in print mode

* Add print mode to contributors

* Allow home pagew to be printed

* Code review feedback

--- a/src/templates/en/2019/contributors.html
+++ b/src/templates/en/2019/contributors.html
@@ -439,4 +439,6 @@
 })();
 
   </script>
+  <!-- add chapter.js to handle print mode and avoid duplicating code -->
+  <script src='/static/js/chapter.js' defer></script>
 {% endblock %}
